<resources>

    <string name="google_maps_api_key">AIzaSyAwXHd2TxLixDYo7AQRX2TeAHdMWNL2y9c</string>

    <string name="app_name">Bullet Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Misa Misic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Navigation drawer items -->
    <string name="mood_tracker">Mood tracker</string>
    <string name="diary">Diary</string>
    <string name="ratings">Ratings</string>
    <string name="tasks">Tasks</string>
    <string name="habbits">Habits</string>
    <string name="spendings">Spendings</string>

    <!-- Strings related to Settings -->
    <!-- account settings-->
    <string name="account_settings">Account</string>

    <string name="change_pass">Change password</string>
    <string name="change_pass_key">change_password</string>
    <!-- reminders settings-->
    <string name="reminders_settings">Reminders</string>
    <string name="reminders_settings_key">reminders_settings</string>
    <!-- personalize-->
    <string name="personalization_settings">Personalize</string>

    <string name="theme_title">Dark mode</string>
    <string name="theme_key">dark_mode</string>
    <!-- general options-->
    <string name="general_settings">General</string>
    <string name="general_settings_key">general_settings</string>

    <string name="language_setting">Language</string>
    <string name="language_setting_key">language_list</string>
    <string name="language_dialog_title">Choose language</string>


    <string name="options_setting">Show/hide options</string>
    <string name="options_setting_key">show_options</string>
    <string name="options_dialog_name">Choose options</string>
    <!-- support us-->
    <string name="support_us_settings">Support us</string>

    <string name="tutorial_settings">Video tutorial</string>


    <string name="user_username">username</string>
    <string name="user_first_lastname">name_lastname</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Diary activity labels -->
    <string name="title_activity_diary">Diary</string>
    <string name="attach_section_title">Add to your day:</string>
    <string name="title_thoughts">Title...</string>
    <string name="thoughts">Your thoughts...</string>
    <string name="done_button">Done</string>
    <string name="choose_date">Choose date...</string>

    <!-- Main activity labels -->
    <string name="title_date">Date :</string>
    <string name="title_time">Time :</string>
    <string name="for_date">For Date :</string>
    <string name="select_time">Select Time :</string>

    <string name="add_description">Add description...</string>

    <!-- Common button labels -->
    <string name="ok_str">Ok</string>
    <string name="cancel_str">Cancel</string>
    <string name="continue_str">Continue</string>
    <string name="back_str">Back</string>
    <string name="edit_str">Edit</string>
    <string name="delete_str">Delete</string>
    <string name="done_str">Done</string>
    <string name="save_str">Save</string>

    <!-- Mood tracking -->
    <string name="title_activity_mood_tracker">Mood Tracker</string>
    <string name="title_activity_mood_preview">Mood Preview</string>
    <string name="add_mood_dialog_title">Add Mood:</string>
    <string name="add_mood_dialog_description">Add Description</string>
    <string name="edit_mood_dialog_title">Edit Mood:</string>
    <string name="edit_mood_dialog_description">Edit Description</string>

    <string name="mood_awesome">AWESOME</string>
    <string name="mood_good">GOOD</string>
    <string name="mood_average">AVERAGE</string>
    <string name="mood_bad">BAD</string>
    <string name="mood_terrible">TERRIBLE</string>

    <!-- Ratings -->
    <string name="title_activity_ratings">Ratings</string>
    <string name="add_rating_dialog_title">Add Rating:</string>
    <string name="add_rating_dialog_type">Choose type:</string>
    <string name="add_rating_title">Add Title...</string>
    <string name="add_rating_text">Add Review...</string>
    <string name="edit_rating_dialog_title">Edit Rating:</string>
    <string name="edit_rating_title">Edit Title:</string>
    <string name="edit_rating_text">Edit Review:</string>

    <string name="rating_category_book">Book</string>
    <string name="rating_category_activity">Activity</string>
    <string name="rating_category_movie">Movie</string>
    <string name="rating_category_music">Music</string>

    <!-- Habit tracking -->
    <string name="title_activity_habit_tracker">Habit Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login activity labels -->
    <string name="title_activity_login">Log in</string>
    <string name="not_member_yet">Don\'t have an account? Sign up!</string>
    <string name="title_activity_logout">Log out</string>
    <string name="logged_in_alredy">You are Logged In</string>
    <string name="login_progress_dialog">Authenticating and fetching previous data...</string>
    <string name="fields_empty">Required field(s) are empty!</string>
    <string name="network_required">Turn Wifi or Data to proceed</string>

    <!-- Sign up activity labels -->
    <string name="title_activity_signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_member">Already a member? Log in!</string>
    <string name="creating_account">"Creating Account..."</string>

    <!-- Wallet activity labels -->
    <string name="title_activity_wallet">Wallet</string>
    <string name="add_item_dialog_title">Add new item</string>
    <string name="choose_month">Choose month...</string>
    <string name="item_amount">Amount</string>
    <string name="item_name">Name</string>
    <string name="income">INCOME</string>
    <string name="spending">SPENDING</string>

    <!-- Tasks and Events -->
    <string name="reminders_num">Reminders</string>
    <string name="reminder_str">Reminder</string>
    <string name="add_reminders">Reminders?</string>
    <string name="task_event_title">Add Title...</string>
    <string name="task_event_description">Add Description...</string>
    <string name="task_event_type_task">Task</string>
    <string name="task_event_type_event">Event</string>
    <string name="task_event_done">Done?</string>
    <string name="delete_text">Are you want to delete it?</string>

    <!-- Error and Warning messages -->
    <string name="basic_error">Error occurred</string>
    <string name="mood_select_mood_warning">Please select mood</string>
    <string name="rating_select_mood_warning">Please select rating and category</string>
    <string name="selected_date_missing_error">Selected date missing</string>

    <!-- Success messages -->
    <string name="mood_saved">Mood saved</string>
    <string name="rating_saved">Rating saved</string>
    <string name="mood_deleted">Mood Deleted</string>
    <string name="rating_deleted">Rating Deleted</string>
    <string name="task_status_updated">Task status updated</string>
    <string name="wallet_item_saved">Wallet item saved</string>

    <!-- Days in week -->
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>

    <!-- album activity options -->
    <string name="choose_option">Select your option:</string>
    <string name="take_a_pic">Take photo</string>
    <string name="choose_img">Select photo</string>
    <string name="choose_multiple_img">Select multiple photos</string>

    <!-- Widget text -->
    <string name="widget_task">TASK</string>
    <string name="widget_event">EVENT</string>
    <string name="widget_empty">EMPTY</string>

    <!-- Maps text -->
    <string name="maps_search_bar">Enter Location, Address or Zipp code </string>
    <string name="maps_no_results">No results</string>

</resources>
