<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/functionalities" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracker"
            android:title="@string/mood_tracker" />
        <item
            android:id="@+id/nav_diary"
            android:title="@string/diary" />
        <item
            android:id="@+id/nav_ratings"
            android:title="@string/ratings" />
        <item
            android:id="@+id/nav_tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_habbits"
            android:title="@string/habbits" />
        <item
            android:id="@+id/nav_spendings"
            android:title="@string/spendings" />
    </group>

    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings" />
    <item android:title="@string/account_settings">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/title_activity_login" />
            <item
                android:id="@+id/nav_signup"
                android:icon="@drawable/ic_menu_signup"
                android:title="@string/title_activity_signup" />
        </menu>
    </item>

</menu>
