<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <LinearLayout
        android:id="@+id/current_date_layout"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:padding="5dp"
        android:background="@drawable/date_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:text="@string/title_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/day_of_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_view_date"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/day_of_week"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/add_reminder_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:background="@color/colorPrimaryLight"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="120dp"
        android:gravity="center">

        <TimePicker
            android:id="@+id/reminder_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:timePickerMode="spinner" />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="top"
        android:hint="@string/add_rating_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="top"
        android:hint="@string/add_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reminder_dialog_btn_cancel"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_light"
            android:text="@string/cancel_str"/>

        <Button
            android:id="@+id/reminder_dialog_btn_ok"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_light"
            android:text="@string/ok_str"/>

    </LinearLayout>


</LinearLayout>