<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryLight"
        android:gravity="center" >

        <TextView
            android:id="@+id/add_rating_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rating_dialog_title"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/rating_dialog_date_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_rating_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_btn_background"
            app:srcCompat="@drawable/ic_star_border_light" />

        <ImageButton
            android:id="@+id/add_rating_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_btn_background"
            app:srcCompat="@drawable/ic_star_border_light" />

        <ImageButton
            android:id="@+id/add_rating_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_btn_background"
            app:srcCompat="@drawable/ic_star_border_light" />

        <ImageButton
            android:id="@+id/add_rating_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_btn_background"
            app:srcCompat="@drawable/ic_star_border_light" />

        <ImageButton
            android:id="@+id/add_rating_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_btn_background"
            app:srcCompat="@drawable/ic_star_border_light" />
ma
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center" >

        <TextView
            android:id="@+id/add_rating_dialog_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rating_dialog_type"
            android:textSize="18dp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/rating_category_spinner"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/rating_title"
        android:layout_width="match_parent"
        android:hint="@string/add_rating_title"
        android:layout_marginTop="5dp"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/rating_text"
        android:layout_width="match_parent"
        android:gravity="top"
        android:hint="@string/add_rating_text"
        android:layout_marginTop="5dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rating_dialog_btn_cancel"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_light"
            android:textColor="@color/dialogButtonText"
            android:text="@string/cancel_str"/>

        <Button
            android:id="@+id/rating_dialog_btn_ok"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_light"
            android:textColor="@color/dialogButtonText"
            android:text="@string/ok_str"/>

    </LinearLayout>

</LinearLayout>